@@ -9,6 +9,7 @@ import com.javaprep.backend.entity.RequestStatus;
 import com.javaprep.backend.repository.QuestionRepository;
 import com.javaprep.backend.repository.QuestionSubmissionRequestRepository;
 import com.javaprep.backend.service.AnalyticsService;
+import com.javaprep.backend.service.QuestionService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
@@ -22,6 +23,8 @@ import org.springframework.stereotype.Service;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -30,61 +33,113 @@ public class AnalyticsServiceImpl implements AnalyticsService {
     private final QuestionRepository questionRepository;
     private final QuestionSubmissionRequestRepository requestRepository;
     private final MongoTemplate mongoTemplate;
+    private final QuestionService questionService;
 
     @Override
     public AdminDashboardResponse dashboard() {
-        long totalQuestions = questionRepository.count();
-        long publishedQuestions = mongoTemplate.count(
-                Query.query(Criteria.where("status").is(QuestionStatus.PUBLISHED)), Question.class);
-        long draftQuestions = mongoTemplate.count(
-                Query.query(Criteria.where("status").is(QuestionStatus.DRAFT)), Question.class);
 
-        long pending = requestRepository.countByStatus(RequestStatus.PENDING);
-        long approved = requestRepository.countByStatus(RequestStatus.APPROVED);
-        long rejected = requestRepository.countByStatus(RequestStatus.REJECTED);
+        // =========================================================
+        // PART 1: 0ms RAM CACHE CALCULATIONS (Eliminates 7 DB Calls)
+        // =========================================================
+        List<Question> allQuestions = questionService.getAllQuestionsForCache();
 
-        List<QuestionSubmissionRequest> recent = requestRepository
-                .findAll(PageRequest.of(0, 10, Sort.by(Sort.Direction.DESC, "createdAt")))
-                .getContent();
+        long totalQuestions = allQuestions.size();
 
-        List<Question> mostViewed = mongoTemplate.find(
-                Query.query(Criteria.where("status").is(QuestionStatus.PUBLISHED))
-                        .with(Sort.by(Sort.Direction.DESC, "viewCount")).limit(10),
-                Question.class);
+        long publishedQuestions = allQuestions.stream()
+                .filter(q -> q.getStatus() == QuestionStatus.PUBLISHED)
+                .count();
 
-        List<Question> mostBookmarked = mongoTemplate.find(
-                Query.query(Criteria.where("status").is(QuestionStatus.PUBLISHED))
-                        .with(Sort.by(Sort.Direction.DESC, "bookmarkCount")).limit(10),
-                Question.class);
+        long draftQuestions = allQuestions.stream()
+                .filter(q -> q.getStatus() == QuestionStatus.DRAFT)
+                .count();
 
+        Map<String, Long> questionsByType = allQuestions.stream()
+                .filter(q -> q.getQuestionType() != null)
+                .collect(Collectors.groupingBy(q -> q.getQuestionType().name(), Collectors.counting()));
+
+        Map<String, Long> questionsByTopic = allQuestions.stream()
+                .filter(q -> q.getTopic() != null && !q.getTopic().trim().isEmpty())
+                .collect(Collectors.groupingBy(Question::getTopic, Collectors.counting()));
+
+        // In-memory sort for Top 10 Viewed
+        List<Question> mostViewed = allQuestions.stream()
+                .filter(q -> q.getStatus() == QuestionStatus.PUBLISHED)
+                .sorted((q1, q2) -> Long.compare(
+                        q2.getViewCount() == null ? 0 : q2.getViewCount(),
+                        q1.getViewCount() == null ? 0 : q1.getViewCount()
+                ))
+                .limit(10)
+                .collect(Collectors.toList());
+
+        // In-memory sort for Top 10 Bookmarked
+        List<Question> mostBookmarked = allQuestions.stream()
+                .filter(q -> q.getStatus() == QuestionStatus.PUBLISHED)
+                .sorted((q1, q2) -> Long.compare(
+                        q2.getBookmarkCount() == null ? 0 : q2.getBookmarkCount(),
+                        q1.getBookmarkCount() == null ? 0 : q1.getBookmarkCount()
+                ))
+                .limit(10)
+                .collect(Collectors.toList());
+
+
+        // =========================================================
+        // PART 2: PARALLEL DB CALLS FOR SUBMISSIONS
+        // Fires all 4 network requests simultaneously
+        // =========================================================
+
+        CompletableFuture<Long> pendingFuture = CompletableFuture.supplyAsync(() ->
+                requestRepository.countByStatus(RequestStatus.PENDING));
+
+        CompletableFuture<Long> approvedFuture = CompletableFuture.supplyAsync(() ->
+                requestRepository.countByStatus(RequestStatus.APPROVED));
+
+        CompletableFuture<Long> rejectedFuture = CompletableFuture.supplyAsync(() ->
+                requestRepository.countByStatus(RequestStatus.REJECTED));
+
+        CompletableFuture<List<QuestionSubmissionRequest>> recentFuture = CompletableFuture.supplyAsync(() ->
+                requestRepository.findAll(PageRequest.of(0, 10, Sort.by(Sort.Direction.DESC, "createdAt"))).getContent());
+
+        // Wait for all 4 network requests to finish at the same time
+        CompletableFuture.allOf(pendingFuture, approvedFuture, rejectedFuture, recentFuture).join();
+
+
+        // =========================================================
+        // PART 3: BUILD RESPONSE
+        // =========================================================
         return AdminDashboardResponse.builder()
                 .totalQuestions(totalQuestions)
                 .publishedQuestions(publishedQuestions)
                 .draftQuestions(draftQuestions)
-                .pendingRequests(pending)
-                .approvedRequests(approved)
-                .rejectedRequests(rejected)
-                .questionsByType(questionBreakdown(null))
-                .questionsByTopic(groupCountBy("topic"))
-                .recentSubmissions(recent.stream().map(r -> AdminDashboardResponse.QuestionRequestSummary.builder()
+
+                // Extract results from the futures safely using .join()
+                .pendingRequests(pendingFuture.join())
+                .approvedRequests(approvedFuture.join())
+                .rejectedRequests(rejectedFuture.join())
+
+                .questionsByType(questionsByType)
+                .questionsByTopic(questionsByTopic)
+
+                .recentSubmissions(recentFuture.join().stream().map(r -> AdminDashboardResponse.QuestionRequestSummary.builder()
                         .id(r.getId())
                         .title(r.getTitle())
                         .status(r.getStatus().name())
                         .submittedByUserId(r.getSubmittedByUserId())
                         .createdAt(String.valueOf(r.getCreatedAt()))
-                        .build()).toList())
+                        .build()).collect(Collectors.toList()))
+
                 .mostViewed(mostViewed.stream().map(q -> AdminDashboardResponse.QuestionPopularitySummary.builder()
                         .id(q.getId())
                         .title(q.getTitle())
                         .viewCount(q.getViewCount() == null ? 0 : q.getViewCount())
                         .bookmarkCount(q.getBookmarkCount() == null ? 0 : q.getBookmarkCount())
-                        .build()).toList())
+                        .build()).collect(Collectors.toList()))
+
                 .mostBookmarked(mostBookmarked.stream().map(q -> AdminDashboardResponse.QuestionPopularitySummary.builder()
                         .id(q.getId())
                         .title(q.getTitle())
                         .viewCount(q.getViewCount() == null ? 0 : q.getViewCount())
                         .bookmarkCount(q.getBookmarkCount() == null ? 0 : q.getBookmarkCount())
-                        .build()).toList())
+                        .build()).collect(Collectors.toList()))
                 .build();
     }
 
